Revert "Crescent vine alpha"

--- a/browser/locales/en-US/chrome/branding/brand.dtd
+++ b/browser/locales/en-US/chrome/branding/brand.dtd
@@ -1,3 +1,3 @@
-<!ENTITY  brandShortName        "Winternight-Classic">
-<!ENTITY  brandFullName         "Winternight-Classic">            
-<!ENTITY  vendorShortName       "ClassicNick">
+<!ENTITY  brandShortName        "RetroZilla Browser">
+<!ENTITY  brandFullName         "RetroZilla Browser">            
+<!ENTITY  vendorShortName       "RetroZilla">
