--- a/browser/locales/en-US/chrome/branding/brand.properties
+++ b/browser/locales/en-US/chrome/branding/brand.properties
@@ -1,3 +1,3 @@
-brandShortName=Winternight-Classic
-brandFullName=Winternight-Classic
-vendorShortName=ClassicNick
+brandShortName=RetroZilla Browser
+brandFullName=RetroZilla Browser
+vendorShortName=RetroZilla
