--- a/toolkit/locales/en-US/chrome/global/retrozilla.dtd
+++ b/toolkit/locales/en-US/chrome/global/retrozilla.dtd
@@ -1,10 +1,8 @@
 <!ENTITY mozilla.title
-'The Book of RetroZilla, 1:1'>
+'The Book of RetroZilla, 2:1'>
 
 <!ENTITY mozilla.quote
-'As the beast <em class="f">progressed</em>, it left the elders in his following behind, 
-to face the wrath of <em>Mammon</em>. The true believers, unwilling to succumb 
-to <em>Mammon</em>, formed a <em>new beast</em>, one suited for <em>all</em> of his followers.'>
+'While the beast engaged on a fierce battle with Marmon,the true believers raised the new beast,gave it food and thus used it's wise knowledge that elders who were left behind,made them. It's the start of a era of a new beast before it develops into a wise beast...'>
 
 <!ENTITY mozilla.from
-'from <strong>The Book of RetroZilla,</strong> 1:1'>
+'from <strong>The Book of RetroZilla,</strong> 2:1'>
