fix default search and update various internal strings

--- a/xpfe/browser/resources/locale/en-US/region.properties
+++ b/xpfe/browser/resources/locale/en-US/region.properties
@@ -2,14 +2,14 @@
 homePageDefault=about:home
 keywordList=http://home.netscape.com/escapes/keywords
 webmailKeyword=http://webmail.netscape.com
-fallbackDefaultSearchURL=http://www.google.com/search?q=
-otherSearchURL=http://www.google.com
+fallbackDefaultSearchURL=https://lite.duckduckgo.com/lite/?q=
+otherSearchURL=https://lite.duckduckgo.com/lite/
 #
 # all.js
 #
 browser.startup.homepage=about:home
 browser.throbber.url=https://rn10950.github.io/RetroZillaWeb/
-browser.search.defaulturl=http://www.google.com/search?q=
+browser.search.defaulturl=https://lite.duckduckgo.com/lite/?q=
 general.useragent.contentlocale=US
 
 browser.translation.service=http://translate.google.com/translate?prev=/language_tools&u=
