--- a/xpfe/communicator/resources/locale/en-US/region.properties
+++ b/xpfe/communicator/resources/locale/en-US/region.properties
@@ -1,10 +1,10 @@
 # search-panel.properties
 #   Localizable URLs
-defaultSearchURL=http://www.google.com/search?q=
-browser.search.defaultenginename=Google
+defaultSearchURL=https://lite.duckduckgo.com/lite/?q=
+browser.search.defaultenginename=DuckDuckGo Lite
 
 # sidebar customize/more... panel locale
 intl.content.langcode=en-US
 
 # update notifications: new update page
-update_notifications.provider.0.datasource=http://retrozilla.no-ip.org/releases/updates/en-US.rdf
+update_notifications.provider.0.datasource=https://rn10950.github.io/RetroZillaWeb/update.rdf
